ci: configure CI/CD with Yarn 4 and GitHub Actions
- Add packageManager field specifying Yarn 4.1.0
- Enable Corepack in CI/CD workflows for consistent package manager version
- Add Yarn 4 lockfile for reproducible builds
- Configure workflows with --immutable flag
- Skip E2E tests in CI (require private keys)
- Allow Jest to pass when no tests found
- Add CONTRIBUTING.md with development guidelines

This ensures consistent Yarn version across local development
and CI environments using modern Node.js Corepack tooling.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@jinn-network/mech-client-ts",
   "version": "0.0.1",
   "description": "TypeScript client for Autonolas AI Mechs - Full feature parity with mech-client-python using async delivery monitoring",
+  "packageManager": "yarn@4.1.0",
   "main": "dist/index.js",
   "exports": {
     ".": "./dist/index.js",
@@ -14,7 +15,7 @@
     "build": "yarn tsc && cp -r src/abis dist/ && cp -r src/configs dist/",
     "dev": "yarn ts-node src/index.ts",
     "start": "yarn node dist/index.js",
-    "test": "jest -c jest.config.js"
+    "test": "jest -c jest.config.js --passWithNoTests"
   },
   "keywords": [
     "mech",
