chore: update .gitignore and enhance README with AI-generated code notice
- Re-enable 'dist' directory in .gitignore to include in npm pack
- Add section in README to inform users about AI-generated code, emphasizing the need for code review, active development, community contributions, and testing before deployment

--- a/.gitignore
+++ b/.gitignore
@@ -81,8 +81,7 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-# dist - commented out to include in npm pack
-# dist
+dist
 .output
 
 # Gatsby files
