--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@types/node": "^20.0.0",
     "@types/ws": "^8.18.1",
     "jest": "^29.0.0",
+    "jest-mock-extended": "^4.0.0",
     "ts-node": "^10.0.0",
     "typescript": "^5.9.2"
   },
