--- a/package.json
+++ b/package.json
@@ -66,6 +66,11 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
+    "@babel/preset-typescript": "^7.28.5",
+    "@types/babel__core": "^7",
+    "@types/babel__preset-env": "^7",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
     "@types/ws": "^8.18.1",
